--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Audio files
+*.mp3
+*.m4a
+*.wav
+*.aiff
+
 # Python
 __pycache__/
 *.py[cod]
@@ -7,3 +13,7 @@ __pycache__/
 
 # VS Code
 .vscode/
+
+# Swift
+.build/
+.swiftpm/
